--- a/app/css/components/signup.css
+++ b/app/css/components/signup.css
@@ -1,7 +1,12 @@
 .register {
-    position:relative;
-    top: 72px;
     height: 100%;
-    background-color: #FF6700;
-    flex: 1 1 auto;
+    background-color: #ff5722;
+    margin: 0;
+}
+
+.register-title {
+  margin: 0;
+}
+.signup-page {
+  background-color: #ff5722;
 }
