--- a/app/css/components/landing.css
+++ b/app/css/components/landing.css
@@ -1,3 +1,27 @@
 .landing {
-  flex: 0 1 40px;
+    height: 100%;
+    background-color: #ff5722;
+    margin: 0;
+}
+
+.hidden {
+  display: none;
+}
+
+.hero-container {
+  height:100%;
+  width: 100%;
+  left:0%;
+  position: relative;
+}
+
+.hero-container > video {
+  min-height:100%;
+  min-width:100%;
+  position:absolute;
+  right:0;
+  bottom: 56;
+  object-fit: none;
+  height: 100%;
+  z-index: 0;
 }
