--- a/app/css/components/navigation.css
+++ b/app/css/components/navigation.css
@@ -2,6 +2,7 @@
 
 .appbar {
   width: 100%;
+  z-index: 100;
 }
 
 .flex {
@@ -10,6 +11,8 @@
 
 .navigation {
   height: 10%;
+  position:relative !important;
+  z-index: 100;
 }
 .menu-button {
   margin-left: -12;
