Added new color pallete / theme, added some ui and logic for profile

--- a/app/css/components/navigation.css
+++ b/app/css/components/navigation.css
@@ -10,7 +10,7 @@
 }
 
 .navigation-landing {
-  background-color: black !important;
+  // background-color:#1A2942 !important;
 }
 
 .navigation-about {
