--- a/app/css/components/sidebar.css
+++ b/app/css/components/sidebar.css
@@ -3,8 +3,18 @@
   width: 100%;
   height: 100% !important;
   overflowX: hidden;
+  background-color: #1A2942 !important;
+  border-top: .4px solid rgb(0, 0, 0, .4);
 }
 
+.sidebar-divider {
+  backround-color: rgb(0,0,0, .4);
+}
 .maxHeight {
   height: 100%;
+}
+
+
+.sidebar-color {
+  color: #667A89 !important;
 }
