Router kicks you to index when logging out, icon image resize fix

--- a/app/css/components/profile.css
+++ b/app/css/components/profile.css
@@ -64,6 +64,6 @@
 .profile-headset {
   position:relative !important;
   top: 20px !important;
-  height: 50% !important;
-  width: 50% !important;
+  height: 200px !important;
+  width: 200px !important;
 }
